# serverless-python-requirements

./: .gitignore  .tool-versions  package.json  test.js
.github/workflows/: lint.yml  publish.yml  test.yml
example/: serverless.yml
example_native_deps/: serverless.yml
tests/base/: requirements-w-hashes.txt
tests/individually/: serverless.yml
tests/non_build_pyproject/: serverless.yml
tests/non_poetry_pyproject/: serverless.yml
tests/poetry/: pyproject.toml  serverless.yml
