[tool.poetry]
name = "poetry"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
Flask = "*"
bottle = {git = "https://git@github.com/bottlepy/bottle.git", tag = "0.12.18"}
boto3 = "^1.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
